--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="tile_stopping">Igniter STOPPING</string>
     <string name="tile_off">Igniter OFF</string>
     <!-- App Bar Menu -->
+    <string name="menu_action_settings">Settings</string>
     <string name="action_test_connection">Test Connection</string>
     <string name="action_show_develop_info_logcat">Show develop info in logcat</string>
 
