--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="main_menu_action_server_list">Server List</string>
     <string name="main_menu_action_test_connection">Test Connection</string>
     <string name="main_menu_action_exempt_app">Enabled Apps</string>
+    <string name="main_menu_action_exempt_all_app">Exempt All Apps</string>
+    <string name="main_menu_action_enable_all_app">Enabled All Apps</string>
     <string name="main_menu_action_clash_editor_file_editor">Clash Config File Editor</string>
 
 
